--- a/style.css
+++ b/style.css
@@ -5,19 +5,7 @@ body {
   padding: 0;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1rem;
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
+/* CSS para padronizar o tamanho dos cards */
 .card {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -26,6 +14,21 @@ header {
   margin: 10px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+/* Estilize o header */
+header {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
+
+.container {
+  max-width: 850px;
+  margin: auto;
+  padding: 20px;
+}
+
 
 .card h2 {
   font-size: 24px;
