--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ header {
 
 #map {
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: -30px;
+  left: 0;
   width: 100%;
+  height: 100%;
 }
 
