--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #f0f0f0;
-  margin: 0;
+  margin: -20px 0;
   padding: 0;
 }
 
@@ -13,14 +13,6 @@ body {
   padding: 20px;
   margin: 10px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-/* Estilize o header */
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1rem;
 }
 
 .container {
