--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #f0f0f0;
-  margin: -20px 0;
   padding: 0;
+  background: linear-gradient(to bottom, #edf2fb, #ccdbfd);
 }
 
 /* CSS para padronizar o tamanho dos cards */
 .card {
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: #fafafa;
+  border: 1px solid rgb(190, 203, 232);
   border-radius: 10px;
   padding: 20px;
   margin: 10px 0;
@@ -18,7 +18,6 @@ body {
 .container {
   max-width: 850px;
   margin: auto;
-  padding: 20px;
 }
 
 
@@ -78,7 +77,6 @@ body {
 
 #map {
   position: absolute;
-  top: -30px;
   left: 0;
   width: 100%;
   height: 100%;
