--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #f0f0f0;
-  padding: 0;
-  background: linear-gradient(to bottom, #edf2fb, #ccdbfd);
+  background: linear-gradient(to bottom right, #c2dcfe, #e8bffa, #acdbdf);
+  margin: 0;
 }
 
-/* CSS para padronizar o tamanho dos cards */
 .card {
-  background-color: #fafafa;
-  border: 1px solid rgb(190, 203, 232);
+  background-color: #fff;
+  border: 2px solid #b4aff1;
   border-radius: 10px;
   padding: 20px;
   margin: 10px 0;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .container {
@@ -20,65 +18,72 @@ body {
   margin: auto;
 }
 
-
 .card h2 {
   font-size: 24px;
+  color: #6724d3;
 }
 
 .form-group {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .form-group label {
   display: block;
   margin-bottom: 5px;
+  color: #702bde;
 }
 
-.form-group input {
+.form-group input, .form-control {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 1px solid #c2dcfe;
+  color: #333;
 }
 
-.form-group input:focus {
+.form-control:focus {
   outline: none;
   border-color: #0056b3;
 }
 
-.form-group input:invalid {
+.form-control:invalid {
   border-color: #ff0000;
 }
 
-.form-group input:valid {
-  border-color: #0056b3;
+.form-control:valid {
+  border: 1px solid;
+  border-image: linear-gradient(to bottom right, #862ad6, #393cf3) 1;
+  border-radius: 5px !important;
 }
 
-.btn-dark {
+.btn-dark, #showMore {
   display: inline-block;
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
+  border-radius: 35px;
   color: #fff;
-  background-color: #007bff;
+  background: #864fde;
   cursor: pointer;
   font-size: 16px;
   text-decoration: none;
-  transition: background-color 0.2s ease-in-out;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  transition: background 0.2s ease-in-out, box-shadow 0.4s ease-in-out;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  text-shadow: 1px 1px 2px #0e0440;
+  position: relative;
+  top: 12px;
 }
 
-.btn-dark:hover {
-  background-color: #0056b3;
+.btn-dark:hover, #showMore:hover {
+  background: #6335e0;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-#map {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.form-control {
+  border-image: linear-gradient(to bottom right, #862ad6, #393cf3) 1;
+  border-width: 1px;
+  border-radius: 5px !important;
+  color: #0a0a0a;
 }
 
+div#cepResults {
+  padding-top: 10px;
+}
