--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(to bottom right, #c2dcfe, #e8bffa, #acdbdf);
-  margin: 0;
+  background: linear-gradient(to bottom right, #a7e0f1, #cbb3e7, #a08bd4);
+  margin: 0px;
 }
 
 .card {
@@ -10,7 +10,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   margin: 10px 0;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 6px 2px rgba(46, 3, 71, 0.2);
 }
 
 .container {
